# HR-RAG-Project

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: cd.yml  ci.yml
data/.github/workflows/: pipeline.yml
data/processed/: chunked_corpus.json.dvc  embeddings.npy.dvc  faiss_index.bin.dvc  structured_corpus.json.dvc
data/raw/: raw_corpus.json.dvc
data/topics/: medical_topics.txt
docs/: mkdocs.yml
env_hr/: pyvenv.cfg
env_hr/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack  get_gprof  get_objgraph  jp.py  pygrun  undill
hr-rag-system/: LICENSE  Makefile
hr-rag-system/docs/docs/: index.md
hr-rag-system/hr_rag_system/: plots.py
hr-rag-system/hr_rag_system/modeling/: predict.py  train.py
hr_rag_system/: __init__.py  chunking.py  config.py  dataset.py  embeddings.py  features.py  generation.py  preprocessing.py  preprocessing_2.py  retrieval.py  run_rag.py  vectordb_5.py  verification.py
hr_rag_system/modeling/: preprocessing.py  retieval.py  vectordb.py
notebooks/: load_dataset.ipynb
static/: style.css
templates/: index.html
