[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hr_rag_system"
version = "0.0.1"
description = "Hallucination-Resistant Retrieval-Augmented Generation (HR-RAG) system with self-verification, cross-encoder scoring, and confidence-aware responses."
authors = [
  { name = "Shubham Yadav \u0026 Rishab Chityala" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["hr_rag_system"]
include = ["pyproject.toml", "hr_rag_system/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["hr_rag_system"]
force-sort-within-sections = true

